# weizmannpackageexample

./: .gitignore  LICENSE  README.md  pyproject.toml
clusteringexample/: __init__.py
data/: A12_data.npy  A13_data.npy  A14_data.npy  A15_data.npy  A16_data.npy  A17_data.npy  A18_data.npy  A19_data.npy  A20_data.npy  A21_data.npy
notebooks/: clustering_example_local.ipynb  clustering_example_local_nonlocal_plot.ipynb  plot.py
src/weizmannpackageexample/: __init__.py  plot.py
src/weizmannpackageexample/analysis/: __init__.py
